[project]
name = "back"
version = "0.1.0"
description = "Add your description here"
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Ошибки связанные с кирилицей
    "RUF001", "RUF002", "RUF003",

    # TODO
    "TD003", "FIX002",

    # Cравнение магических значений
    "PLR2004",

    # Работа с датой
    "DTZ005",
]
